--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <div class="container">
-  <h1> {{ project_name}} running </h1>
+  <h1> {{ title }} running </h1>
   <div class="loading-dots">
   </div>
 </div>
